// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test cases for FormField should render snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "lineHeight": 18,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Array [
          Object {
            "marginBottom": 6,
          },
          Object {},
        ],
      ]
    }
  >
    
    <Text
      style={
        Array [
          Object {
            "fontSize": 10,
            "lineHeight": 15,
            "textAlign": "left",
          },
          Object {
            "fontFamily": "OpenSans-Regular",
            "fontWeight": "400",
          },
          Object {
            "color": "#4C5F72",
          },
        ]
      }
    />
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontSize": 10,
          "lineHeight": 15,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Object {
          "color": "#33495E",
          "marginBottom": 12,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Test cases for FormField should render snapshot when isOptional is true 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "lineHeight": 18,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Array [
          Object {
            "marginBottom": 6,
          },
          Object {},
        ],
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 10,
            "lineHeight": 15,
            "textAlign": "left",
          },
          Object {
            "fontFamily": "OpenSans-Regular",
            "fontWeight": "400",
          },
          Object {
            "color": "#4C5F72",
          },
        ]
      }
    >
      (optional)
    </Text>
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontSize": 10,
          "lineHeight": 15,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Object {
          "color": "#33495E",
          "marginBottom": 12,
        },
      ]
    }
  >
    
  </Text>
</View>
`;
